# fftw3-android

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fftw.cpp
app/src/main/cpp/libbench2/: useropt.c
app/src/main/java/com/park/fftw/: MainActivity.java  NativeBridge.java
gradle/wrapper/: gradle-wrapper.properties
